[#1932] try allowing reflective modification of private fields in java.util/lang