@@ -12,6 +12,14 @@ targetCompatibility = 1.8
 test {
     useJUnitPlatform()
 }
+tasks.withType(Test.class) {
+    if (org.gradle.api.JavaVersion.current().isCompatibleWith(
+        org.gradle.api.JavaVersion.VERSION_18)) {
+        it.jvmArgs += ['--add-opens java.base/java.util=ALL-UNNAMED',
+                       '--add-opens java.base/java.lang=ALL-UNNAMED']
+    }
+}
+
 
 dependencies {
     api rootProject
